tests/baselines/reference/moduleExports1.errors.txt
moduleExports1.ts(1,15): error TS2304: Cannot find name 'TypeScript'.
moduleExports1.ts(7,6): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
moduleExports1.ts(7,22): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== moduleExports1.ts (3 errors) ====
    var rue = new TypeScript.Strasse.Street.Rue();
                  ~~~~~~~~~~
!!! error TS2304: Cannot find name 'TypeScript'.
    
    rue.address = "1 Main Street";
    
    void 0;
    
    if (!module.exports) module.exports = "";
         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
                         ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.